# MoeChat

./: .gitattributes  .gitignore  Config.py  README.md  chat_server.py  config.example.yaml  config.yaml  download.py  init_server.py  main_web.py  pyproject.toml  requirements.txt  start.bat  update.py
.claude/: settings.local.json
.github/: release_template.md
.github/workflows/: release.yml
api/: asr_api.py  assistant_api.py  chat_api.py  config_api.py  core_api.py  interaction_api.py  knowledge_api.py  llm_api.py  resource_api.py  tts_api.py  vad_api.py  wakeword_api.py
api/api/: asr_api.py  chat_api.py  socket_api.py
api/models/: asr_request.py  tts_request.py
api/ws/: chat_handler.py  chat_protocol.py  chat_ws_api.py  ws_manager.py
client-gui/src/: client_gui.py  client_utils.py  pickable_session.py  pysilero.py  ui.py  utils.py
core/: assistant.py  chat_core.py  external_server.py  interaction_core.py
core/chat/: __init__.py  base.py  multimodal_processor.py  v1.py  v2_motion.py  v3_motion.py  v4_motion.py
core/emotion/: compute_acceptance_ratio.py  compute_arousal_permission_factor.py  create_mood_instruction.py  emotion_engine.py  emotion_engine_backup.py  f_valence_map.py  hormone_cycle.py
core/expression_generator/: __init__.py  action_sequencer.py  atomic_actions.py  expression_generator_service.py  expression_generator_service_v2.py  live2d_expression_loader.py  live2d_parameter_load.py  motion_combiner.py  motion_engine_v3.py  motion_generator_v3.py  motion_schema.py  streaming_json_parser.py
core/expression_generator/utils/: expression_loader.py  parameter_load.py  path.py
core/llm/: __init__.py  callback_manager.py  llm_client.py  prompt_manager.py  response_parser.py
core/meme_system/: config.json  emotion_processor.py  emotion_service.py  keyword_loader.py
core/scheduler/: __init__.py  builtin_tasks.py  multi_parser.py  scheduler.py  task.py
core/scheduler/parsers/: base_parser.py  multi_parser.py  text_stream_parser.py
data/: memory_editor_web.py
data/agents/Chat酱/: info.yaml
data/models/sherpa-onnx-kws-zipformer-zh-en-3M/: keywords.txt
data/templates/: base.html  edit.html  index.html
doc/: README_zh.md
exceptions/: error_handlers.py
models/dto/: asr_request.py  assistant_request.py  chat_request.py  interaction_request.py
models/dto/request/: chat_request.py  interaction_request.py
models/dto/response/: ChatResponse.py  ToolWsResponse.py
models/types/: assistant_info.py  user_state.py
my_utils/: __init__.py  agent.py  check_and_download_default_assistant.py  config_manager.py  core_mem.py  data_base.py  embedding.py  file_utils.py  live2d_parameter_load.py  llm_request.py  llm_tooling.py  log.py  logo.py  long_mem.py  prompt.py  socket_asr.py  speak_finish.py  sv.py  token_counter.py  tool_interface.py  tool_manager.py
my_utils/pysilero/: cli.py  pysilero.py
plugins/client_plugins/clock/: format_tool.py
plugins/client_plugins/daily_quote/: quote_tools.py
plugins/client_plugins/file/: upload_tool.py
plugins/financial/: __init__.py  api_client.py  plugin.py  state_manager.py
plugins/financial/balancer/: app.py
router/: api_router.py  router.py
script/: core_mem_migrate.py
scripts/: build-asset-bundle.ps1  build-data-bundle.ps1
services/: agent.py  asr_service.py  assistant_service.py  core_mem.py  data_base.py  expression_generator_service.py  long_mem.py  memory_v2.py  resource_service.py  tts_service.py  wakeword_service.py
tool_system/: integration.py
tool_system/core/: aggregator.py  base.py  enums.py  errors.py  notifier.py  registry.py  router.py  types.py
tool_system/executors/: base_executor.py  client_executor.py  hybrid_executor.py  server_executor.py
tool_system/tools/: memory_tool.py
utils/: agent.py  config.py  core_mem.py  data_base.py  embedding.py  file_utils.py  live2d_parameter_load.py  llm_request.py  logo.py  long_mem.py  parse_json_response.py  prompt.py  socket_asr.py  speak_finish.py  split_text.py  sv.py  version.py
utilss/: agent.py
weather/: config.py  geolocation.py  main.py  output.py  parsers.py  weather_fetcher.py
(+15 files in other folders)
