[project]
name = "moechat"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiolab>=0.5.1",
    "colorlog>=6.10.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "funasr>=1.3.1",
    "gsv-tts-lite>=0.3.11",
    "httpx>=0.28.1",
    "jionlp>=1.5.27",
    "modelscope>=1.35.3",
    "numpy>=2.0.0",
    "onnxruntime>=1.24.4",
    "openai>=2.30.0",
    "pillow>=11.3.0",
    "praat-parselmouth>=0.4.7",
    "pyrnnoise>=0.4.3",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "ruamel-yaml>=0.19.1",
    "sherpa-onnx>=1.12.35",
    "sherpa-onnx-core>=1.12.35",
    "shortuuid>=1.0.13",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers>=5.4.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
test = [
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "accelerate"
]




[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[tool.uv.sources]
llama-cpp-python = { git = "https://github.com/JamePeng/llama-cpp-python", branch = "main" }
torch = [
   { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchvision = [
   { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
